--- a/src/components/pages/Partners/HowItWorks/styles.module.scss
+++ b/src/components/pages/Partners/HowItWorks/styles.module.scss
@@ -100,6 +100,7 @@
   display: flex;
   flex-direction: column;
   gap: 60px;
+  width: 100%;
   max-width: 1200px;
   margin: 0 auto;
   position: relative;
@@ -110,25 +111,25 @@
 }
 
 .roadmapRow {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   align-items: center;
-  justify-content: center;
   gap: 40px;
   position: relative;
+  width: 100%;
 
   @include media-breakpoint-down(md) {
-    flex-direction: column;
+    grid-template-columns: 1fr;
     gap: 30px;
   }
 }
 
 .roadmapCard {
   position: relative;
-  width: 320px;
+  width: 100%;
   height: 280px;
 
   @include media-breakpoint-down(md) {
-    width: 100%;
     height: 240px;
   }
 }
