--- a/src/components/pages/DesktopNew/Template/styles.module.scss
+++ b/src/components/pages/DesktopNew/Template/styles.module.scss
@@ -16,7 +16,7 @@
       rgba(0, 0, 0, 0) 80%,
       transparent 80%
     ),
-    url("/images/new-desktop.webp");
+    url("/images/HeroBackground.webp");
   background-size: 100% 80%;
   background-position: top center;
   background-repeat: no-repeat;
