--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -23,23 +23,9 @@
 
 @font-face {
   font-family: "Inter";
-  font-weight: 400;
+  font-weight: 100 800;
   font-display: swap;
-  src: url("./fonts/Inter/static/Inter_18pt-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter";
-  font-weight: 500;
-  font-display: swap;
-  src: url("./fonts/Inter/static/Inter_18pt-Medium.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter";
-  font-weight: 600;
-  font-display: swap;
-  src: url("./fonts/Inter/static/Inter_18pt-SemiBold.ttf") format("truetype");
+  src: url("./fonts/Inter/Inter-VariableFont_opsz,wght.ttf") format("truetype");
 }
 
 @font-face {
@@ -50,37 +36,10 @@
     format("truetype-variations");
 }
 
-// Optimized font stacks with better fallbacks
-$font-body:
-  "Chivo",
-  -apple-system,
-  BlinkMacSystemFont,
-  "Segoe UI",
-  Roboto,
-  "Helvetica Neue",
-  Arial,
-  sans-serif;
-$font-sf:
-  "SF",
-  -apple-system,
-  BlinkMacSystemFont,
-  "Segoe UI",
-  Roboto,
-  "Helvetica Neue",
-  Arial,
-  sans-serif;
-$font-inter:
-  "Inter",
-  -apple-system,
-  BlinkMacSystemFont,
-  "Segoe UI",
-  Roboto,
-  "Helvetica Neue",
-  Arial,
-  sans-serif;
-$font-jet-brains:
-  "JetBrains Mono", "SF Mono", Monaco, Inconsolata, "Roboto Mono",
-  "Droid Sans Mono", "Courier New", monospace;
+$font-body: "Chivo", sans-serif;
+$font-sf: "SF", sans-serif;
+$font-inter: "Inter", sans-serif;
+$font-jet-brains: "JetBrains Mono", sans-serif;
 
 $font-all: (
   "font-body": $font-body,
