--- a/src/components/pages/UseCases/shared/BackLink/styles.module.scss
+++ b/src/components/pages/UseCases/shared/BackLink/styles.module.scss
@@ -8,7 +8,7 @@
   font-weight: 500;
   transition: color 0.3s ease;
   display: inline-block;
-  margin-bottom: var(--spacer-4);
+  margin-bottom: 2rem; // spacer-4: 32px
 
   &:hover {
     color: var(--interface-blue-300);
@@ -16,6 +16,6 @@
   }
   
   @include media-breakpoint-down(md) {
-    margin-bottom: var(--spacer-3);
+    margin-bottom: 1.5rem; // spacer-3: 24px
   }
 }
