--- a/src/components/pages/UseCases/shared/EmptyState/styles.module.scss
+++ b/src/components/pages/UseCases/shared/EmptyState/styles.module.scss
@@ -4,11 +4,11 @@
 // Empty State
 .emptyState {
   text-align: center;
-  padding: var(--spacer-9) 0;
+  padding: 7.5rem 0;
 }
 
 .emptyTitle {
-  margin-bottom: var(--spacer-3);
+  margin-bottom: 1.5rem;
   color: var(--primary-white);
   font-size: 2rem;
   font-weight: 600;
@@ -20,7 +20,7 @@
 }
 
 .emptyDescription {
-  margin-bottom: var(--spacer-5);
+  margin-bottom: 3rem;
   color: var(--interface-light-gray-400);
   font-size: 1.25rem;
   line-height: 1.4;
@@ -28,11 +28,11 @@
 
 .emptyButton {
   height: 51px;
-  padding: 0 var(--spacer-5);
+  padding: 0 3rem;
   
   @include media-breakpoint-down(md) {
     height: 60px;
-    padding: var(--spacer-3) var(--spacer-6);
+    padding: 1.5rem 4rem;
     font-size: 16px;
     font-weight: 600;
     width: 100%;
