--- a/src/components/pages/Desktop/Template/styles.module.scss
+++ b/src/components/pages/Desktop/Template/styles.module.scss
@@ -2,7 +2,7 @@
 @import "~bootstrap/scss/mixins";
 
 .template {
-  background-image: url("/images/HeroBackground.webp");
+  background-image: url("/images/new-desktop.png");
   background-size: cover;
   background-position: center center;
   background-color: var(--primary-black);
