--- a/src/components/pages/Home/Notebook/styles.module.scss
+++ b/src/components/pages/Home/Notebook/styles.module.scss
@@ -2,59 +2,57 @@
 @import "~bootstrap/scss/mixins";
 
 .content {
-  margin: var(--spacer-6) auto var(--spacer-6) auto;
-  gap: var(--spacer-3);
-  color: var(--primary-white);
-  h2 {
-    font-family: var(--font-body);
-    font-size: 48px;
-    font-weight: 400;
-    line-height: 120%;
-    letter-spacing: -0.48px;
-    @include media-breakpoint-down(lg) {
-      font-size: 38px;
-      text-align: center;
+    margin: var(--spacer-6) auto var(--spacer-6) auto;
+    gap: var(--spacer-3);
+    color: var(--primary-white);
+    h2 {
+        font-family: var(--font-body);
+        font-size: 48px;
+        font-weight: 400;
+        line-height: 120%;
+        letter-spacing: -0.48px;
+        @include media-breakpoint-down(lg) {
+            font-size: 38px;
+            text-align: center;
+          }
     }
-  }
-  p {
-    font-family: var(--font-body);
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 140%;
-    padding-bottom: 38px;
-    @include media-breakpoint-down(lg) {
-      text-align: center;
+    p {
+        font-family: var(--font-body);
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 140%;
+        padding-bottom: 38px;
+        @include media-breakpoint-down(lg) {
+            text-align: center;
+          }
     }
-  }
 }
 .notebook {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  gap: var(--spacer-2);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: var(--spacer-2);
 }
 .row {
-  @include media-breakpoint-down(xl) {
-    justify-content: center !important;
-    align-items: center !important;
-  }
+    @include media-breakpoint-down(xl) {
+        justify-content: center !important;
+        align-items: center !important;
+    }
 }
 .background {
-  background-image: url("/images/cardGradient.webp");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  overflow: hidden;
-  height: 100%;
-  will-change: transform; // Optimize for animations
-  contain: layout style paint; // CSS containment for better performance
+    background-image: url("/images/cardGradiant.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    height: 100%;
 }
 .margin {
-  @include media-breakpoint-down(mlg) {
-    &:not(:last-child) {
-      margin-bottom: var(--spacer-3);
-    }
-  }
+    @include media-breakpoint-down(mlg) {
+        &:not(:last-child) {
+          margin-bottom: var(--spacer-3);
+        }
+      }    
 }
