--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -91,13 +91,14 @@ $_colors: (
     750: #504fe8,
     700: #003395,
     650: #2120e2,
-    625: #6366F1,
+    625: #6366f1,
     600: #1d4fae,
     575: #0d80f2,
     550: #0a66c2,
     500: #1e71d4,
     400: #6c9fff,
     300: #c6daff,
+    200: #0099ff,
   ),
   orange: (
     500: #e64328,
