--- a/src/components/pages/DesktopNew/Template/styles.module.scss
+++ b/src/components/pages/DesktopNew/Template/styles.module.scss
@@ -24,6 +24,22 @@
     min-height: calc(100vh - 240px);
     background: none;
   }
+
+  :global(.country-container) {
+    min-width: 100% !important;
+    max-width: 100% !important;
+    width: 100% !important;
+  }
+
+  :global(.company-container) {
+    min-width: 100% !important;
+    max-width: 100% !important;
+    width: 100% !important;
+  }
+
+  :global(.notice-choice) {
+    margin-top: 0px !important;
+  }
 }
 
 .container {
